savvy-macro/tests/cases/simple_cases.stderr
error: function must have return type
 --> tests/cases/simple_cases.rs:6:1
  |
6 | #[savvy]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `savvy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the return type must be savvy::Result<T> or savvy::Result<()>
  --> tests/cases/simple_cases.rs:10:30
   |
10 | fn wrong_return_type(x: i32) -> i32 {}
   |                              ^^^^^^

error: `Owned-` types are not allowed here. Did you mean `IntegerSexp`?
  --> tests/cases/simple_cases.rs:13:28
   |
13 | fn wrong_type_owned_int(x: OwnedIntegerSexp) -> savvy::Result<()> {
   |                            ^^^^^^^^^^^^^^^^

error: `Owned-` types are not allowed here. Did you mean `RealSexp`?
  --> tests/cases/simple_cases.rs:18:29
   |
18 | fn wrong_type_owned_real(x: OwnedRealSexp) -> savvy::Result<()> {
   |                             ^^^^^^^^^^^^^

error: `Owned-` types are not allowed here. Did you mean `LogicalSexp`?
  --> tests/cases/simple_cases.rs:23:32
   |
23 | fn wrong_type_owned_logical(x: OwnedLogicalSexp) -> savvy::Result<()> {
   |                                ^^^^^^^^^^^^^^^^

error: `Owned-` types are not allowed here. Did you mean `StringSexp`?
  --> tests/cases/simple_cases.rs:28:31
   |
28 | fn wrong_type_owned_string(x: OwnedStringSexp) -> savvy::Result<()> {
   |                               ^^^^^^^^^^^^^^^

error: #[savvy] doesn't accept `*mut DllInfo`. Did you mean #[savvy_init]?
  --> tests/cases/simple_cases.rs:33:26
   |
33 | fn wrong_type_dllinfo(x: *mut DllInfo) -> savvy::Result<()> {
   |                          ^^^^^^^^^^^^

error: savvy only supports a fieldless enum
  --> tests/cases/simple_cases.rs:40:6
   |
40 |     A(i32),
   |      ^^^^^

error: savvy doesn't support an enum with discreminant
  --> tests/cases/simple_cases.rs:48:9
   |
48 |     B = 100,
   |         ^^^

error: DllInfo must be `*mut DllInfo`
  --> tests/cases/simple_cases.rs:52:23
   |
52 | fn init_wrong_type(x: DllInfo) -> savvy::Result<()> {
   |                       ^^^^^^^

error: DllInfo must be `*mut DllInfo`
  --> tests/cases/simple_cases.rs:57:24
   |
57 | fn init_wrong_type2(x: *const DllInfo) -> savvy::Result<()> {
   |                        ^^^^^^^^^^^^^^

error: #[savvy_init] can be used only on a function that takes `*mut DllInfo`
  --> tests/cases/simple_cases.rs:62:41
   |
62 | fn init_wrong_type3(x: *mut DllInfo, y: i32) -> savvy::Result<()> {
   |                                         ^^^
